--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <h1 class="ibm white">Prácticas Profesionalizantes G2 2023</h1>
         <h3 class="ibm white">Gonzalo Castro</h3>
         <div class="projects poppins">
-            <a href="">
-            <div>
-                <img src="img/mantenimiento.png">
-                <h4>TPX: Prueba</h4>
-                <h5>Página de prueba para demostrar que este bloque funciona</h5>
+            <a href="projects/Ejercicio 1/">
+            <div id="joes">
+                <img id="joes" src="img/Joes.png">
+                <h4>TP1: Joe's</h4>
+                <h5>Página de presentación para una tienda de zapatillas.</h5>
             </div>
             </a>
-            <a href="">
+            <a href="projects/Ejercicio 2/ejer01.html">
             <div>
                 <img src="img/mantenimiento.png">
                 <h4>TPX: Prueba</h4>
