--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="projects poppins">
             <a href="projects/Ejercicio 1/">
             <div id="joes">
-                <img id="joes" src="img/Joes.png">
+                <img id="joesImg" src="img/Joes.png">
                 <h4>TP1: Joe's</h4>
                 <h5>Página de presentación para una tienda de zapatillas.</h5>
             </div>
@@ -61,5 +61,6 @@
             </a>
         </div>
     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
