--- a/projects/Ejercicio_3/restaurantes/comidas/comida1.html
+++ b/projects/Ejercicio_3/restaurantes/comidas/comida1.html
@@ -18,8 +18,10 @@
         <h2 class="poppins">Estofado fino</h2>
     </section>
     <p class="ofresto ubuntu grey">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex neque, quasi doloremque maxime recusandae quidem. Consequuntur, ipsa nesciunt error optio tempora fugit ipsum sequi rem nihil atque velit fugiat magni!</p>
-    <input class="fs15 tomorrow" type="text" placeholder="Enviar una nota (Quitar cebolla, agregar salsa, etc.)">
-    <button class="count">-</button><input class="counter" type="text" value="0"><button class="count">+</button><button class="add-to">Agregar al carro</button>
+    <input class="nota fs15 tomorrow" type="text" placeholder="Enviar una nota (Quitar cebolla, agregar salsa, etc.)">
+    <div class="compra">
+        <button id="minus" class="count fs40 blanco poppins">-</button><input id="counter" class="counter fs30 blanco" type="text" value="0" disabled><button id="plus" class="count fs40 blanco poppins">+</button><button class="add-to fs30 blanco poppins">AGREGAR AL CARRO</button>
+    </div>
     <footer class="nav_mobile basic">
         <input type="checkbox"> <a href="../detalles1.html" name="afooter">DETALLES</a>
         <input type="checkbox" checked> <a href="../menu1.html" name="afooter">MENU</a>
@@ -27,5 +29,6 @@
     </footer>
 
     <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
