--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h5>Página de prueba para testear la funcionalidad de una página vista desde una computadora de escritorio y un teléfono celular.</h5>
             </div>
             </a>
-            <a href="projects/Ejercicio_3/">
+            <a href="projects/Ejercicio_3/index.html">
             <div>
                 <img src="img/mantenimiento.png">
                 <h4>TPX: Prueba</h4>
